# wb-parser-kafka-docker-compose-

./: docker-compose.yml  pyproject.toml
dags/: main.py
database/: database.sql
kafka/: consumer.py  producer.py
pars_data/: main.py
